cross-region-cross-account-rds-backups/cold-start-cf-template.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: "Este Template de CloudFormation contiene los recursos iniciales necesarios para la prueba de concepto."

Parameters:
  DBPassword:
    NoEcho: true
    Description: Password de administracion de la base de datos
    Type: String
    MinLength: 8
  DBName:
    Description: Nombre de la base de datos
    Type: String
  DBUser:
    Description: Usuario administrador
    Type: String
  VpcId:
    Description: Id del VPC
    Type: String
  KeyName:
    Description: Nombre de la llave SSH para usar con el bastion
    Type: String
  SubnetIdA:
    Description: Id A de la Subnet donde se podrá acceder a la base de datos.
    Type: String
  SubnetIdB:
    Description: Id B de la Subnet donde se podrá acceder a la base de datos.
    Type: String
  ImageId:
    Description: AMI del servidor bastion
    Type: String

Resources:
  DB:
    Type: "AWS::RDS::DBInstance"
    Properties:
      DBInstanceClass: db.t4g.small
      AllocatedStorage: 20
      DBName: !Ref DBName
      Engine: postgres
      MasterUsername: !Ref DBUser
      MasterUserPassword: !Ref DBPassword
      VPCSecurityGroups:
        - !Ref DBSecurityGroup
      DBSubnetGroupName: !Ref DBSubnetGroup
      StorageEncrypted: true
      KmsKeyId: "alias/aws/rds"
      PubliclyAccessible: false

  DBSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupDescription: "Subnet Group para la base de datos"
      SubnetIds:
        - !Ref SubnetIdA
        - !Ref SubnetIdB

  DBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Permitir acceso a la base de datos desde el servidor bastion
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref BastionSecurityGroup

  BastionSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: SSH access to bastion host
      VpcId: !Ref VpcId # Replace with your default VPC ID if necessary
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  BastionHost:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      ImageId: !Ref ImageId
      SubnetId: !Ref SubnetIdA
      SecurityGroupIds:
        - !Ref BastionSecurityGroup

  PrincipalKmsKey:
    Type: "AWS::KMS::Key"
    Properties:
      Description: "Llave KMS para copiar los snapshots creados por RDS."
      KeyPolicy:
        Version: "2012-10-17"
        Id: "Id-Kms-1"
        Statement:
          - Sid: "Asignacion de perimisos"
            Effect: "Allow"
            Principal:
              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
            Action: "kms:*"
            Resource: "*"
          - Sid: "Permitir el uso con RDS"
            Effect: "Allow"
            Principal:
              Service: "rds.amazonaws.com"
            Action:
              - "kms:Encrypt"
              - "kms:Decrypt"
              - "kms:ReEncrypt*"
              - "kms:GenerateDataKey*"
              - "kms:DescribeKey"
            Resource: "*"

Outputs:
  DBInstanceEndpoint:
    Description: The database endpoint
    Value: !GetAtt DB.Endpoint.Address

  BastionHostPublicIP:
    Description: The public IP address of the bastion host
    Value: !GetAtt BastionHost.PublicIp

  PrincipalKmsKeyArn:
    Description: "The ARN of the KMS Key for RDS snapshots"
    Value: !GetAtt PrincipalKmsKey.Arn
